# estiam-pizza

./: .env  README-Docker.md  README.md  docker-compose.yml  package-lock.json
.github/workflows/: cd.yml  ci.yml
pizza-back/: Dockerfile  README.md  database.db  database.py  main.py  pyproject.toml
pizza-back/app/: data.py  database.py  main.py  schemas.py
pizza-back/app/routers/: auth.py  order.py  pizza.py
pizza-back/tests/: test_app.py
pizza-front/: .gitignore  Dockerfile  README.md  jest.config.js  package-lock.json  package.json
pizza-front/public/: menu.json
pizza-front/src/: App.jsx  main.jsx
pizza-front/src/components/: Navbar.css  Navbar.jsx
pizza-front/src/css/: Formulaire.css  Home.css  admin.css  contact.css  login.css  menu.css  panier.css
pizza-front/src/hooks/: use-auth.jsx  use-pizza.jsx
pizza-front/src/pages/: Admin.jsx  Commandes.tsx  Contact.jsx  FormulaireCommande.jsx  Home.jsx  Login.jsx  Menus.jsx  Paniers.jsx
